# kgllm_pharm

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
diagrams/experiment/: _smoke.yaml  ablation_backbone_biomistral7b.yaml  ablation_backbone_llama3_8b.yaml  ablation_backbone_phi35.yaml  ablation_fs_moe_shared.yaml  ablation_kg_schema_full.yaml  ablation_kg_schema_primekg.yaml  ablation_no_adapter.yaml  ablation_no_conformal.yaml  ablation_scale_clinical_text.yaml  ablation_scale_molecular.yaml  ablation_scale_pathway.yaml  ablation_scale_target.yaml  main.yaml  supplementary_crossdomain_ctade.yaml  supplementary_noise_05.yaml  supplementary_ood_postcutoff.yaml
docs/: deviations.md  implementation-map.md  project-context.md  repo-plan.md
signals/: test_adapter_cold_bound.py  test_config_layering.py  test_conformal_coverage.py  test_determinism.py  test_house_style.py  test_metrics_vs_sklearn.py  test_overfit_and_gradients.py  test_router_and_mask.py  test_scales_shape.py  test_stats_vs_reference.py  test_synthesis_recovery.py  test_training_smoke.py
src/kgllm_pharm/: __init__.py  frontier.py
src/kgllm_pharm/audit/: concordance.py  measures.py  reliability.py  significance.py
src/kgllm_pharm/bureau/: custody.py  processing.py  register.py  roster.py  seal.py
src/kgllm_pharm/classification/: coder.py  gate.py  tolerance.py
src/kgllm_pharm/clearance/: assurance.py  certificate.py
src/kgllm_pharm/consignments/: codes.py  (+3 more)
working/: launch_eval.sh  launch_train.sh  prepare_data.sh
(+15 files in other folders)
